src/test/deca/syntax/invalid/provided/print_sans_semi.deca
//lexique passe
//synt ne passe pas : problème de ";" qui manque

{println("ana_m9awed")}